--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
     "svelte": "^3.52.0",
     "svelte-simple-modal": "^1.4.5",
-    "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "svelte-i18n": "^3.6.0"
   }
 }
